src/test/resources/de/cd4analysis/cocos/mcg/valid/CD4AC2003.cd
package de.cd4analysis.cocos;

classdiagram CD4AC2003 {
  public class A;

  protected class B;
  
  private class C;
  
  class D;
}
