src/test/resources/de/cd4analysis/cocos/mcg/invalid/CD4AC2002.cd
package de.cd4analysis.cocos;

classdiagram CD4AC2002 {
  class A {
    abstract String a;
    private abstract String b;
    static abstract String c;
  }

  interface I {
    static abstract String d;
  }
}